<resources>
    <string name="app_name">FlashcardCuoiKy</string>
    
    <!-- Login/Register strings -->
    <string name="log_in">Đăng nhập</string>
    <string name="sign_up">Đăng ký</string>
    <string name="log_in_with_google">Đăng nhập với Google</string>
    <string name="log_in_with_facebook">Đăng nhập với Facebook</string>
    <string name="log_in_with_apple">Đăng nhập với Apple</string>
    <string name="sign_up_with_google">Đăng ký với Google</string>
    <string name="sign_up_with_facebook">Đăng ký với Facebook</string>
    <string name="sign_up_with_apple">Đăng ký với Apple</string>
    <string name="or_email">hoặc email</string>
    <string name="email">Email</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="terms_and_privacy">Bằng cách nhấn Đăng nhập/Đăng ký, bạn chấp nhận Điều khoản Dịch vụ và Chính sách Bảo mật của chúng tôi.</string>
</resources>